"""Load git_repository from remote repo."""

workspace(name = "pr-bot")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

########################################################################

git_repository(
    name = "com_github_3rdparty_main_lib",
    commit = "e813938959a206777e701cd50cd88eaadcbd9c3f",
    remote = "https://github.com/ArthurBandaryk/main-lib",
    shallow_since = "1652444989 +0300",
)

git_repository(
    name = "com_github_3rdparty_eventuals",
    commit = "d2faf86f7607563fb3eb4f9199b3700100c9c328",
    remote = "https://github.com/3rdparty/eventuals",
    shallow_since = "1652874461 +0300",
)
