"""Load git_repository from remote repo."""

workspace(name = "pr-bot")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

########################################################################

git_repository(
    name = "com_github_3rdparty_main_lib",
    commit = "e813938959a206777e701cd50cd88eaadcbd9c3f",
    remote = "https://github.com/ArthurBandaryk/main-lib",
    shallow_since = "1652444989 +0300",
)

git_repository(
    name = "com_github_3rdparty_eventuals",
    commit = "8e03f3a6cae064c24887ae0fafab2dea7796b7d6",
    remote = "https://github.com/3rdparty/eventuals",
    shallow_since = "1652874989 +0300",
)
